# Shop

./: .gitignore  README.md  docker-compose.yml
basket_service/: manage.py  pyproject.toml
basket_service/basket_service/: asgi.py  settings.py  urls.py  wsgi.py
basket_service/system/: settings.py
payment_service/: Dockerfile  pyproject.toml
payment_service/config/uwsgi/: uwsgi.ini
payment_service/coupons/: models.py
payment_service/payment/: admin.py  models.py  urls.py  webhooks.py
payment_service/payment/migrations/: 0001_initial.py
payment_service/payment/serializers/other/: serializers.py
payment_service/payment/serializers/payment/: serializers.py
payment_service/payment/views/other/: urls.py  views.py
payment_service/system/: settings.py  urls.py
payment_service/system/settings/: base.py  dev.py  prod.py
store_service/: Dockerfile  manage.py  pyproject.toml
store_service/basket/: basket.py  tests.py  urls.py
store_service/config/uwsgi/: uwsgi.ini
store_service/favorites/: models.py  tests.py  urls.py
store_service/favorites/migrations/: 0001_initial.py
store_service/store/: admin.py  models.py  permissions.py  signals.py  tests.py  urls.py
store_service/store/migrations/: 0001_initial.py  0002_alter_comment_author_profile_picture.py  0003_alter_comment_author_profile_picture_imagemodel.py  0004_alter_comment_author_name.py
store_service/store_service/: asgi.py  settings.py  urls.py  wsgi.py
store_service/system/: celery.py  settings.py  urls.py
store_service/system/settings/: base.py  dev.py  prod.py
user_service/: Dockerfile  pyproject.toml
user_service/chat/: consumers.py  middleware.py  models.py  routing.py  urls.py
user_service/chat/migrations/: 0001_initial.py
user_service/config/uwsgi/: uwsgi.ini
user_service/system/: asgi.py  celery.py  settings.py  urls.py
user_service/system/settings/: base.py  dev.py  prod.py
user_service/user/: admin.py  models.py  tasks.py  urls.py
user_service/user/migrations/: 0001_initial.py  0002_user_expected_prices_alter_user_categories_bought.py  0003_user_date_of_birth_user_show_data_in_comments_and_more.py
user_service/user/tests/: tests_models.py  tests_views.py
user_service/user_service/: settings.py  urls.py
(+367 files in other folders)
