[tool.poetry]
name = "basket-service"
version = "0.1.0"
description = ""
authors = ["Vae1ocks <antondobranickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.8"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
