[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.8"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
drf-spectacular = "^0.27.2"
requests = "^2.32.3"
celery = "^5.4.0"
djangorestframework-simplejwt = "^5.3.1"
redis = "^5.0.8"
djangochannelsrestframework = "^1.2.0"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
